# rfheadless

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  WORKING.md
.github/workflows/: pages.yml  performance.yml  platform-tests.yml  release.yml
benches/: all_bench.rs  engine_bench.rs  latency_runner.rs
docs/: CONTRIBUTING.md  _config.yml  development.md  docs.json  examples.md  getting-started.md  index.html  index.md  platform.md  releases.md  rendering.md
docs/api/: engine.md  rfengine.md  types.md
docs/assets/: main.scss  site.css
examples/: bench_latency.rs  bench_styles.rs  cdp_example.rs  rfengine_example.rs  simple_headless.rs  text_snapshot.rs
scripts/: log_session.sh  wakatime_summary.sh
src/: async_api.rs  cdp.rs  error.rs  lib.rs  main.rs  rf_harness.js  rfengine.rs  simple.rs
src/platform/: accessibility.rs  device.rs  media.rs  mod.rs  service_worker.rs
src/rendering/: layout.rs  mod.rs  paint.rs  raster.rs
tests/: computed_style_golden.json  computed_style_golden.rs  golden_accessibility.rs  golden_rendering.rs  integration_platform.rs  integration_request_fulfill.rs  integration_styles.rs  integration_tests.rs  platform_api_smoke.rs  rendering_smoke.rs  visual_integration.rs
tests/goldens/pages/: page1.html
